# bevy-3d-scene

./: Cargo.toml  README.md
assets/environment_maps/: EpicQuadPanorama.HDR
assets/models/: ArchCube.gltf  ChromeSphere.gltf  Floor.gltf  LightSphere.gltf  Skybox.gltf
src/: camera.rs  debug_text.rs  debug_world.rs  floor.rs  light_ambient.rs  light_sun.rs  main.rs  tiefighter.rs
src/lights/: components.rs
